[tool.poetry]
name = "paypal-braintree-test"
version = "0.0.1"
description = "This is a tecnical test"
authors = ["Ismael Ramos <hola@irm.mx>"]

[tool.poetry.dependencies]
python = "^3.10"
luhncheck = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
